--- a/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/components/_sponsors.scss
+++ b/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/components/_sponsors.scss
@@ -49,18 +49,15 @@
 
 		// Sponsor levels
 		.pillar {
-
-			.sponsor-level-title { color: $gold; }
+			.sponsor-level-title { color: $ui-color-5; }
 		}
 
 		.champion {
-
-			.sponsor-level-title { color: $orange; }
+			.sponsor-level-title { color: $ui-color-6; }
 		}
 
 		.accomplice {
-
-			.sponsor-level-title { color: $blue; }
+			.sponsor-level-title { color: $ui-color-3; }
 		}
 
 	}
