--- a/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/components/_forms.scss
+++ b/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/components/_forms.scss
@@ -11,9 +11,9 @@
 	input[type="submit"],
 	input[type="reset"],
 	button {
-		background: $red !important;
+		background: $ui-color-4 !important;
 		border: none !important;
-		border-bottom: 6px solid darken($red, 15) !important;
+		border-bottom: 6px solid darken($ui-color-4, 15) !important;
 		border-radius: 0;
 		padding: 1em 1.2em 0.8em 1.2em;
 		color: $white;
@@ -30,7 +30,7 @@
 		}
 
 		&:hover {
-			background: lighten($red, 5) !important;
+			background: lighten($ui-color-4, 5) !important;
 			color: $white;
 		}
 	}
