--- a/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/components/_comments.scss
+++ b/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/components/_comments.scss
@@ -22,7 +22,7 @@ ol.comment-list {
 
 		&.comment {
 			position: relative;
-			background: lighten($light-blue, 5);
+			background: palette(color3, light);
 			padding: 1.5em;
 			margin: 1.5em 0;
 
@@ -68,7 +68,7 @@ ol.comment-list {
 		color: $gray;
 		margin: 0.5em 0;
 		padding: 0 0 0.5em 0;
-		border-bottom: 2px solid $light-blue;
+		border-bottom: 2px solid palette(color3, light);
 		text-transform: uppercase;
 		letter-spacing: 1px;
 
@@ -82,8 +82,8 @@ ol.comment-list {
 			right: 0;
 
 			a {
-				background: $blue;
-				color: $white;
+				background: palette(color3);
+				color: palette(color7);
 				display: block;
 				padding: 0.15em 0.5em;
 			}
@@ -98,8 +98,11 @@ ol.comment-list {
 
 		li {
 
-			&.depth-2, &.depth-3, &.depth-4, &.depth-5 {
-				border-left: 5px solid $blue;
+			&.depth-2,
+			&.depth-3,
+			&.depth-4,
+			&.depth-5 {
+				border-left: 5px solid palette(color3);
 				margin: 0 0 0.25em 0.25em;
 			}
 		}
