--- a/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/components/_organizers.scss
+++ b/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/components/_organizers.scss
@@ -5,7 +5,7 @@
 		overflow: hidden;
 		padding: 0.5em 0;
 		margin: 0.5em 0;
-		border-bottom: 1px solid $light-gray;
+		border-bottom: 1px solid palette(color1, light);
 
 		> h2 {
 			margin-bottom: 0.5em;
@@ -31,7 +31,7 @@
 
 	}
 
-	@media screen and (max-width: 767px) {
+	@include breakpoint($xs) {
 		.avatar {
 			width: 80px !important;
 			height: 80px !important;
