--- a/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/components/_speakers.scss
+++ b/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/components/_speakers.scss
@@ -16,7 +16,7 @@
 		}
 
 		&:hover .avatar {
-			border-color: $ui-color-5;
+			border-color: palette(color5);
 		}
 	}
 }
@@ -25,7 +25,7 @@
 	margin: 20px 0;
 	padding: 20px 0;
 	overflow: hidden;
-	border-bottom: 1px solid $light-gray;
+	border-bottom: 1px solid palette(color1, light);
 
 	&:first-of-type {
 		margin-top: 0;
@@ -49,7 +49,7 @@
 
 	}
 
-	@media screen and (max-width: 767px) {
+	@include breakpoint($xs) {
 		.avatar {
 			float: none;
 			display: block;
