--- a/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/style.scss
+++ b/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/style.scss
@@ -23,7 +23,7 @@
 body {
 	background: $dark-gray;
 	font-family: $body-font;
-	color: $white;
+	color: palette(color7);
 	@include smoothtext;
 }
 
@@ -37,8 +37,7 @@ body,
 }
 
 #masthead {
-	background: $blue url(/files/2014/08/banner.jpg) no-repeat 45% 0 fixed;
-	// background-size: 100% auto;
+	background: $blue url(#{$i}/banner.jpg) no-repeat 45% 0 fixed;
 	background-size: cover;
 	padding: 5em 0 1.5em 0;
 	margin: 0 0 3em 0;
@@ -55,32 +54,31 @@ body,
 
 	.site-branding, hgroup {
 		@include outer-container;
-		color: $white;
+		color: palette(color7);
 		text-align: center;
 
 		.site-title {
 			display: block;
-			background: url(/files/2014/08/logo.png) no-repeat center;
+			background: url(#{$i}/logo.png) no-repeat center;
 			background-size: auto 100%;
-			// width: 600px;
 			height: 150px;
 			font: 0/0 a;
 			margin: 0 auto;
 
-			@media screen and (max-width: 1023px) {
+			@include breakpoint($md) {
 				height: 100px;
 			}
 
 			body.home & {
 				height: 300px;
 
-				@media screen and (max-width: 1023px) {
+				@include breakpoint($md) {
 					height: 150px;
 				}
 			}
 
 			a {
-				color: $white;
+				color: palette(color7);
 				text-decoration: none;
 			}
 		}
@@ -102,9 +100,9 @@ body,
 }
 
 #page {
-	background: $white;
+	background: palette(color7);
 	margin: 0 auto;
-	color: $dark-gray;
+	color: palette(color1, dark);
 	position: relative;
 
 	@media screen and (max-width: 767px) {
@@ -116,7 +114,7 @@ body,
 	max-width: $max-width;
 	margin: 0 auto;
 
-	@media screen and (max-width: 1262px) {
+	@include breakpoint($lg) {
 		padding-right: 2em;
 		padding-left: 2em;
 	}
@@ -124,7 +122,7 @@ body,
 
 #primary {
 
-	@media screen and (min-width: 767px) {
+	@include breakpoint($xs) {
 		@include span-columns(8);
 	}
 }
@@ -157,32 +155,34 @@ body,
 		}
 	}
 
-	@media screen and (min-width: 767px) {
+	@include breakpoint($xs) {
 		@include span-columns(4);
 	}
 }
 
 #colophon {
-	background: $dark-gray;
+	background: palette(color1, dark);
 	padding: 4em 2em;
 	margin-top: 2em;
 	@include rem(font-size, 1.4);
 	text-transform: uppercase;
 	text-align: center;
 	letter-spacing: 1px;
-	color: $white;
+	color: palette(color7);
 	overflow: hidden;
 
 	a {
 		text-decoration: none;
 	}
 
-	a:link, a:visited {
-		color: $ui-color-5;
+	a:link,
+	a:visited {
+		color: palette(color5);
 	}
 
-	a:hover, a:active {
-		color: $white;
+	a:hover,
+	a:active {
+		color: palette(color7);
 	}
 }
 
@@ -196,25 +196,26 @@ a {
 
 a:link,
 a:visited {
-	color: $ui-color-4;
+	color: palette(color4);
 }
 
 a:hover,
 a:active {
-	color: $ui-color-5;
+	color: palette(color5);
 }
 
 table {
 	width: 100%;
-	border: 1px solid $light-gray;
+	border: 1px solid palette(color1, light);
 	border-collapse: collapse;
 
 	tr {
 
 	}
 
-	th, td {
-		border: 1px solid $light-gray;
+	th,
+	td {
+		border: 1px solid palette(color1, light);
 		padding: 0.5em;
 		vertical-align: text-top !important;
 	}
@@ -223,7 +224,7 @@ table {
 		@include rem(font-size, $base-font-size-alt);
 		font-weight: 600;
 		font-family: $serif;
-		color: $orange;
+		color: palette(color6);
 	}
 
 	td {
@@ -260,17 +261,17 @@ table {
 
 	h4 {
 		@include rem(font-size, 2.4);
-		color: $blue;
+		color: palette(color3);
 	}
 
 	h5 {
 		@include rem(font-size, 2.2);
-		color: $blue;
+		color: palette(color3);
 	}
 
 	h6 {
 		@include rem(font-size, 2.0);
-		color: $dark-gray;
+		color: palette(color1, dark);
 	}
 }
 
@@ -294,10 +295,11 @@ table {
 		bottom: 0;
 		z-index: 0;
 		content: "";
-		border-bottom: 2px solid $light-blue;
+		border-bottom: 2px solid palette(color3, light);
 	}
 
-	.entry-title, .entry-meta {
+	.entry-title,
+	.entry-meta {
 		position: relative;
 		z-index: 1;
 		display: block;
@@ -310,9 +312,8 @@ table {
 
 .entry-footer {
 	@include postmeta;
-	border-top: 1px solid $light-gray;
+	border-top: 1px solid palette($color1, light);
 	padding-top: 0.5em;
-	// text-align: right;
 
 	span {
 		margin-right: 0.5em;
