Added some friendly comments for anyone that decides to view style.css.

--- a/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/components/_comments.scss
+++ b/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/components/_comments.scss
@@ -1,6 +1,8 @@
 // Base comment styles from here:
 // http://cdharrison.com/2008/12/threaded-comments/
 
+/* Comments */
+
 ol.comment-list {
 	list-style: none;
 	margin: 2em 0;
