--- a/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/style.scss
+++ b/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/style.scss
@@ -75,7 +75,7 @@ body,
 			background: url(#{$i}/logo.png) no-repeat center;
 			background-size: auto 100%;
 			height: 150px;
-			font: 0/0 a;
+			@include notext;
 			margin: 0 auto;
 
 			@include breakpoint($md) {
