--- a/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/_mixins.scss
+++ b/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/_mixins.scss
@@ -39,13 +39,14 @@
 //
 // Iconify
 //
-// @author Daryn St. Pierre
-//
 // This will preceed your element with a Font Awesome
 // icon via the :before pseudo element. Reference the
 // Font Awesome website for your desired icon's
 // unicode.
 // Reference: http://fontawesome.io/icon/trophy/
+//
+// @author Daryn St. Pierre
+// @access public
 //
 // @example
 // .element {
@@ -76,11 +77,12 @@
 //
 // Media Query Breakpoint
 //
-// @author Tim Knight
-//
 // The breakpoint mixin uses the same attribute names as Bootstrap's responsive classes
 // to make using the feature as easy to remember as possible. Passing in a responsive class
 // will add a media query and output the passed in block.
+//
+// @author Tim Knight
+// @access public
 //
 // @param
 // {Map} $map - A map variable that contains an min and max key value pair.
@@ -100,11 +102,12 @@
 //
 // Palette Function
 //
-// @author Tim Knight
-//
 // Allows you to make a color palette and then
 // access various shades much easier than traditional
 // methods.
+//
+// @author Tim Knight
+// @access public
 //
 // @example
 // .element { color: palette(gray); }
