Rewrote the Gruntfile a bit to try and include SassDoc but it's throwing an error. Committing for now and will fix later. It might be related to Yosemite fucking up all of the things.

--- a/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/style.scss
+++ b/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/style.scss
@@ -118,7 +118,7 @@ body,
 	color: palette(color1, dark);
 	position: relative;
 
-	@media screen and (max-width: 767px) {
+	@include breakpoint($xs) {
 		@include rem(font-size, 1.8);
 	}
 }
