--- a/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/style.scss
+++ b/wordcamp.org/wp-content/themes/wordcamp-base-v2/scss/style.scss
@@ -40,8 +40,7 @@ body {
 	@include smoothtext;
 }
 
-body,
-#page {
+body, #page {
 	@include rem(font-size, $base-font-size);
 
 	@include breakpoint($xs) {
