--- a/wordcamp.org/wp-content/themes/wordcamp-base-v2/style.css
+++ b/wordcamp.org/wp-content/themes/wordcamp-base-v2/style.css
@@ -494,13 +494,11 @@ body {
   -moz-font-smoothing: antialiased !important;
   font-smoothing: antialiased !important; }
 
-body,
-#page {
+body, #page {
   font-size: 20px;
   font-size: 2rem; }
   @media (max-width: 767px) {
-    body,
-    #page {
+    body, #page {
       font-size: 16px;
       font-size: 1.6rem; } }
 
